[gd_scene load_steps=2 format=3 uid="uid://dkvg1n4w0p1j0"]

[ext_resource type="Script" uid="uid://do50v37mipttn" path="res://scripts/victory_screen.gd" id="1_c3sak"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c3sak")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 208.0
offset_right = 446.0
offset_bottom = 274.0
scale = Vector2(5.686475, 4.1200004)
alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 123.0
offset_right = 524.0
offset_bottom = 146.0
scale = Vector2(2.4, 2.52)
text = "Player 2 wins"
