[gd_scene load_steps=7 format=3 uid="uid://ii52jsj114nh"]

<<<<<<< HEAD
[ext_resource type="Script" uid="uid://do50v37mipttn" path="res://scripts/victory_screen.gd" id="1_rbj82"]
=======
[ext_resource type="Script" path="res://scenes/screens/PlayerWin/p_1_win.gd" id="1_rax26"]
[ext_resource type="Texture2D" path="res://scenes/screens/PlayerWin/winbg.png" id="2_ik8t4"]
[ext_resource type="Texture2D" path="res://scenes/screens/PlayerWin/button.png" id="3_n5yoo"]
[ext_resource type="Texture2D" path="res://scenes/screens/PlayerWin/label.png" id="4_ed3bb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b136j"]
atlas = ExtResource("3_n5yoo")
region = Rect2(17, 40, 62, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1tgf"]
atlas = ExtResource("3_n5yoo")
region = Rect2(17, 40, 62, 19)
>>>>>>> Arman-hangman

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = -17.0
offset_right = 59.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rax26")

[node name="Winbg" type="Sprite2D" parent="."]
modulate = Color(0.58707833, 0.58707833, 0.58707833, 1)
position = Vector2(760, 420.50003)
scale = Vector2(0.41666663, 0.35058597)
texture = ExtResource("2_ik8t4")

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 689.0
offset_top = 429.0
offset_right = 812.0
offset_bottom = 465.0
texture_normal = SubResource("AtlasTexture_b136j")
stretch_mode = 0

[node name="Label" type="Label" parent="QuitButton"]
layout_mode = 0
offset_left = 27.0
offset_top = 9.0
offset_right = 104.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 14
text = "Play again"

[node name="QuitButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 470.0
offset_right = 814.0
offset_bottom = 503.0
texture_normal = SubResource("AtlasTexture_s1tgf")
stretch_mode = 0

[node name="Label" type="Label" parent="QuitButton3"]
layout_mode = 0
offset_left = 39.0
offset_top = 7.0
offset_right = 116.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 14
text = "Menu"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(761, 420)
zoom = Vector2(3, 3)

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0046875
anchor_top = -0.013888889
anchor_right = -0.0046875
anchor_bottom = -0.013888889
offset_left = 628.0
offset_top = 287.0
offset_right = 908.0
offset_bottom = 451.0
texture_normal = ExtResource("4_ed3bb")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_left = 34.0
offset_top = 48.0
offset_right = 123.0
offset_bottom = 68.0
scale = Vector2(2.4, 2.52)
theme_override_font_sizes/font_size = 11
text = "Player 1 wins"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="QuitButton" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="QuitButton3" to="." method="_on_menu_pressed"]
